--- a/src/main/resources/templates/ModifySearchData.html
+++ b/src/main/resources/templates/ModifySearchData.html
@@ -5,14 +5,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
-	<!--<script th:src="@{/assets/js/jquery-3.6.0.js}"></script>-->
-	<title>Search Page</title>
 	<link rel="stylesheet" href="" th:href="@{/CSS/styles.css}">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
-	<script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
 	<script src="js/search.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.min.js"></script>
 	<script th:inline="javascript">
 		/*<![CDATA[*/
 		var contextPath = /*[[${#httpServletRequest.contextPath}]]*/ '/';
@@ -81,7 +76,7 @@
 		<div class="label-container">
 			<label for="stmNumber">STM Number<br>(Quality inspection
 				method_master <br>quality inspection characteristics)
-			</label> <input type="text" id="stmNumber" style="height: 40px;" disabled="disabled" th:value="${stmNo}"
+			</label> <input type="text" id="stmNumber" style="height: 10%;" disabled="disabled" th:value="${stmNo}"
 				oninput="updateDisabledField(this),updateFields()">
 		</div>
 
@@ -110,10 +105,10 @@
 			<label for="pdfFileName">Attachment (PDF)</label>
 			<div class="file-input">
 				<input type="text" id="pdfFileName" disabled="disabled" th:value="${pdf}" name="pdfFileName"
-					style="width: 46%;" />
+					style="width: 37%;" />
 				<input type="hidden" id="pdfFileNameHid" th:value="${pdf}" name="pdfFileName">
 				<button type="button" class="download-button" onclick="downloadPDF()" id="pdfFileName"
-					style="margin-left: 6px;" th:value="${pdf}">PdfDownload</button>
+					style="margin-left: 6px;width: 38%;text-align: start" th:value="${pdf}">PdfDownload</button>
 			</div>
 		</div>
 
@@ -121,10 +116,10 @@
 			<label for="docFileName">Attachment (Word)</label>
 			<div class="file-input">
 				<input type="text" id="docFileName" disabled="disabled" th:value="${word}" name="docFileName"
-					style="width: 46%;" />
+					style="width: 37%;" />
 				<input type="hidden" id="docFileNameHid" th:value="${word}" name="docFileName">
 				<button type="button" class="download-button" onclick="downloadDocument()" id="docFileName"
-					style="margin-left: 6px;" th:value="${word}">DocDownload</button>
+					style="margin-left: 6px;width: 38%;" th:value="${word}">DocDownload</button>
 			</div>
 		</div>
 
@@ -174,15 +169,13 @@
 			<input type="text" id="note3" disabled="disabled" th:value="${note3}">
 		</div>
 
-		<!-- ADDED[S] AMULYA To Link the Particular Page-->
-
 		<div style="margin-top: 20px;">
-			<button type="button" disabled name="action" value="register" class="registerclose" id="clkBtn"
-				onclick="openModifyPage()">Modify</button>
-			<button type="button" name="action" value="revise" class="registerclose" id="Btn"
-				onclick="openRevisePage()">Revise</button>
+			<button type="button" name="action" value="register" class="registerclose" id="clkBtn"
+				onclick="openModifyPage()" disabled>Modify</button>
+			<button type="button" name="action" value="revise" class="registerclose" id="Btn" onclick="openRevisePage()"
+				disabled>Revise</button>
 			<button type="button" name="action" value="delete" class="registerclose" id="clkBtns"
-				onclick="openDeletePage()">Delete</button>
+				onclick="openDeletePage()" disabled>Delete</button>
 			<button type="button" name="action" value="return" class="returnClear"
 				th:onclick="|window.location.href='@{/searchPage(ssoid = ${ssoid})}'|">Return</button>
 		</div>
