--- a/src/main/resources/templates/DeleteScreen.html
+++ b/src/main/resources/templates/DeleteScreen.html
@@ -63,6 +63,7 @@ button:hover {
 	width: 100%;
 	height: 100%;
 	background-color: rgba(0, 0, 0, 0.5);
+	/*  background-color: transparent; */
 }
 
 .modal-content {
@@ -70,23 +71,53 @@ button:hover {
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	background-color: #fefefe;
-	padding: 20px;
-	border: 1px solid #888;
-	width: 300px;
-	color: red;
+	width: 500px;
+	background-color: transparent;
+	border: none;
 }
 
-.close {
-	color: #aaa;
-	float: right;
-	font-size: 20px;
+.upper-part {
+	background-color: #3399ff;
+	padding: 20px;
+	border-bottom: 1px solid #888;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.upper-part p {
+	margin: 0;
 	font-weight: bold;
+	color: white;
+}
+
+.error-message {
+	background-color: #e6e6e6;
+	padding: 20px;
+	color: black;
+}
+
+.close-modal {
+	font-size: 30px;
+	color: red;
 	cursor: pointer;
 }
 
-.close:hover {
-	color: black;
+.close-modal:hover {
+	color: darkred;
+}
+
+.modal-content button {
+	background-color: #333;
+	color: #fff;
+	border: none;
+	border-radius: 3px;
+	cursor: pointer;
+	margin: 5px;
+}
+
+.modal-content button:hover {
+	background-color: #555;
 }
 
 .registerclose {
@@ -149,72 +180,6 @@ button:hover {
         .logout-button i {
             margin-left: 5px; 
         } 
-        #deleteConfirmation .modal {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
-        }
-
-        #deleteConfirmation .modal-content {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 300px;
-            background-color: transparent; 
-            padding: 20px;
-            border: none;
-            color: red;
-        }
-
-        #deleteConfirmation .upper-part {
-            background-color: #3399ff; 
-            padding: 20px;
-            border-bottom: 1px solid #888;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        #deleteConfirmation .upper-part p {
-            margin: 0;
-            font-weight: bold;
-            color: white;
-        }
-
-        #deleteConfirmation .error-message {
-            background-color: #e6e6e6;
-            padding: 20px;
-            color: black;
-        }
-
-        #deleteConfirmation .close-modal {
-            font-size: 30px;
-            color: red;
-            cursor: pointer;
-        }
-
-        #deleteConfirmation .close-modal:hover {
-            color: darkred;
-        }
-
-        #deleteConfirmation button {
-            background-color: #333;
-            color: #fff;
-            border: none;
-            border-radius: 3px;
-            cursor: pointer;
-            margin: 5px;
-        }
-
-        #deleteConfirmation button:hover {
-            background-color: #555;
-        }      
-
 </style>
 </head>
 <body id="dashboardBody">
