--- a/src/main/resources/templates/RegistrationPage.html
+++ b/src/main/resources/templates/RegistrationPage.html
@@ -51,7 +51,6 @@ button:hover {
 	background-color: #555;
 }
 
-/* Modal styles */
 .modal {
 	display: none;
 	position: fixed;
@@ -60,6 +59,7 @@ button:hover {
 	width: 100%;
 	height: 100%;
 	background-color: rgba(0, 0, 0, 0.5);
+	/*  background-color: transparent; */
 }
 
 .modal-content {
@@ -67,23 +67,53 @@ button:hover {
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	background-color: #fefefe;
-	padding: 20px;
-	border: 1px solid #888;
-	width: 300px;
-	color: red;
+	width: 500px;
+	background-color: transparent;
+	border: none;
 }
 
-.close {
-	color: #aaa;
-	float: right;
-	font-size: 20px;
+.upper-part {
+	background-color: #3399ff;
+	padding: 20px;
+	border-bottom: 1px solid #888;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.upper-part p {
+	margin: 0;
 	font-weight: bold;
+	color: white;
+}
+
+.error-message {
+	background-color: #e6e6e6;
+	padding: 20px;
+	color: black;
+}
+
+.close-modal {
+	font-size: 30px;
+	color: red;
 	cursor: pointer;
 }
 
-.close:hover {
-	color: black;
+.close-modal:hover {
+	color: darkred;
+}
+
+.modal-content button {
+	background-color: #333;
+	color: #fff;
+	border: none;
+	border-radius: 3px;
+	cursor: pointer;
+	margin: 5px;
+}
+
+.modal-content button:hover {
+	background-color: #555;
 }
 
 .stmNumber {
@@ -200,32 +230,52 @@ button:hover {
 		<!-- Modal for PDF error -->
 		<div id="pdfError" class="modal">
 			<div class="modal-content">
-				<span class="close-modal" onclick="closeModal('pdfError')">&times;</span>
-				<p>Invalid file format. Please select a PDF file.</p>
+				<div class="upper-part">
+					<p>error</p>
+					<span class="close-modal" onclick="closeModal('pdfError')">&times;</span>
+				</div>
+				<div class="error-message">
+					<p>Invalid file format. Please select a PDF file.</p>
+				</div>
 			</div>
 		</div>
 
 		<!-- Modal for Word error -->
 		<div id="wordError" class="modal">
 			<div class="modal-content">
-				<span class="close-modal" onclick="closeModal('wordError')">&times;</span>
-				<p>Invalid file format. Please select a Word file (doc or docx).</p>
+				<div class="upper-part">
+					<p>error</p>
+					' <span class="close-modal" onclick="closeModal('wordError')">&times;</span>
+				</div>
+				<div class="error-message">
+					<p>Invalid file format. Please select a Word file (doc or
+						docx).</p>
+				</div>
 			</div>
 		</div>
-
 		<!-- Modal for invalid month -->
 		<div id="modalErrorMonth" class="modal">
 			<div class="modal-content">
-				<span class="close" onclick="closeModal('modalErrorMonth')">&times;</span>
-				<p>Invalid month. Please enter a valid month (1-12).</p>
+				<div class="upper-part">
+					<p>error</p>
+					<span class="close-modal" onclick="closeModal('modalErrorMonth')">&times;</span>
+				</div>
+				<div class="error-message">
+					<p>Invalid month. Please enter a valid month (1-12).</p>
+				</div>
 			</div>
 		</div>
-
 		<!-- Modal for invalid day -->
 		<div id="modalErrorDay" class="modal">
 			<div class="modal-content">
-				<span class="close" onclick="closeModal('modalErrorDay')">&times;</span>
-				<p>Invalid day. Please enter a valid day for the selected month.</p>
+				<div class="upper-part">
+					<p>error</p>
+					<span class="close-modal" onclick="closeModal('modalErrorDay')">&times;</span>
+				</div>
+				<div class="error-message">
+					<p>Invalid day. Please enter a valid day for the selected
+						month.</p>
+				</div>
 			</div>
 		</div>
 
