--- a/src/main/resources/templates/SearchPage.html
+++ b/src/main/resources/templates/SearchPage.html
@@ -39,6 +39,14 @@
 			border: 2px solid rgb(0, 0, 0);
 			border-radius: 5px;
 		}
+
+		h5 {
+			margin-top: 1%;
+		}
+
+		tr.tableHover:hover {
+			background-color:lightgray;
+		}
 	</style>
 
 </head>
@@ -100,7 +108,7 @@
 			<label for="textJapanese">Text (Short) Japanese</label>
 			<input type="text" id="Japanese" name="textShortJP" maxlength="200" onkeydown="enterClick(4,event)"
 				pattern="^[\u3040-\u30FF\u31F0-\u31FF\u4E00-\u9FAF\u3400-\u4DBF\s。]+$"
-				title="Enter Only Japanese characters."/>
+				title="Enter Only Japanese characters." />
 		</div>
 
 		<div class="label-container">
@@ -133,13 +141,14 @@
 			<label for="finalDrafter">Final Drafter (Last Name)</label>
 			<input type="text" id="finalDrafterName" name="finalDrafterName" max="100"
 				title="Enter only Characters,Japanese and Space only allowed."
-				pattern="^[a-zA-Z\u3040-\u30FF\u31F0-\u31FF\u4E00-\u9FAF\u3400-\u4DBF\s]+$" onkeydown="enterClick(8,event)" />
+				pattern="^[a-zA-Z\u3040-\u30FF\u31F0-\u31FF\u4E00-\u9FAF\u3400-\u4DBF\s]+$"
+				onkeydown="enterClick(8,event)" />
 		</div>
 
 		<div class="label-container">
 			<label for="oldStmNumber">Old STM Number</label>
 			<input type="text" id="oldSTMnumber" name="oldSTMNumber" maxlength="15" pattern="[a-zA-Z0-9\u3040-\u30FF]*"
-				title="Enter only Alphanumeric and Japanese Characters."  onkeydown="enterClick(9,event)" />
+				title="Enter only Alphanumeric and Japanese Characters." onkeydown="enterClick(9,event)" />
 		</div>
 
 		<div style="display: flex; justify-content: space-between; margin-top: 100px;">
@@ -156,8 +165,7 @@
 		<!--<input type="hidden" id="ssoid" name="ssoid" th:value="${ssoid}" />-->
 		<button type="submit" class="btn btn-primary view">View</button>
 	</form>
-	<!--	<div id="vis"  id="table1">
--->
+
 	<div class="table-responsive table-layout" style="margin-left: 2%;margin-right: 1%;">
 		<table class="table" id="searchTable" title="Confidential information">
 			<thead style="text-align: center;">
@@ -182,11 +190,11 @@
 				<tr th:each="n:${list}" onclick="" class="tableHover">
 					<td style="text-align: center; width: 3%;" th:text="${n.getNo()}"></td>
 					<td style="text-align: center;" th:text="${n.getStmNo()}"></td>
-					<td style="text-align: right;width: 4%;" th:text="${n.getStmVersion()}"></td>
-					<td style="width: 7%;text-align: center;" th:text="${n.getLinkDestination()}"></td>
+					<td style="text-align: right;width: 5%;padding-left: 4%;" th:text="${n.getStmVersion()}"></td>
+					<td style="width:8%;text-align: center;" th:text="${n.getLinkDestination()}"></td>
 					<td style="text-align: center;" th:text="${n.getTextShortJP()}"></td>
 					<td style="text-align: center;" th:text="${n.getTextShortEN()}"></td>
-					<td style="text-align: center;" th:text="${n.getPdfFile()}"></tdstyle="text-align: center;">
+					<td style="text-align: center;" th:text="${n.getPdfFile()}"></td>
 					<td style="text-align: center;" th:text="${n.getWordFile()}"></td>
 					<td style="text-align: center;" th:text="${n.getDraftingDate()}"></td>
 					<td style="text-align: center;" th:text="${n.getFinalDrafterName()}"></td>
