--- a/src/main/resources/templates/SearchPage.html
+++ b/src/main/resources/templates/SearchPage.html
@@ -47,6 +47,77 @@
 		tr.tableHover:hover {
 			background-color:lightgray;
 		}
+
+        /* Added [s] Amulya for date validation popup Style part/*		
+		 Modal styles */
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); 
+   /*  background-color: transparent; */
+}
+
+.modal-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 500px;
+    background-color: transparent;
+     border:none;
+}
+
+.upper-part {
+    background-color: #3399ff;
+    padding: 20px;
+    border-bottom: 1px solid #888; 
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.upper-part p {
+    margin: 0;
+    font-weight: bold;
+    color: white;
+}
+
+.error-message {
+    background-color: #e6e6e6;
+    padding: 20px;
+    color: black;
+}
+
+.close-modal {
+    font-size: 30px;
+    color: red;
+    cursor: pointer;
+}
+
+.close-modal:hover {
+    color: darkred; /* Change the color on hover if needed */
+}
+
+.modal-content button {
+    background-color: #333;
+    color: #fff;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+    margin: 5px; /* Adjust the margin as needed */
+}
+
+.modal-content button:hover {
+    background-color: #555;
+}
+
+/* Added [E] Amulya for date validation popup Style part/*
+
+		
 	</style>
 
 </head>
@@ -151,6 +222,32 @@
 				title="Enter only Alphanumeric and Japanese Characters." onkeydown="enterClick(9,event)" />
 		</div>
 
+<!-- Added [s] Amulya for date validation popup -->
+<div id="modalErrorMonth" class="modal">
+    <div class="modal-content">
+        <div class="upper-part">
+         <p>error</p> <span class="close-modal" onclick="closeModal('modalErrorMonth')">&times;</span>
+        </div>
+        <div class="error-message">
+            <p>Invalid month. Please enter a valid month (1-12).</p>
+        </div>
+    </div>
+</div>
+
+
+<div id="modalErrorDay" class="modal">
+    <div class="modal-content">
+        <div class="upper-part">
+         <p>error</p> <span class="close-modal" onclick="closeModal('modalErrorDay')">&times;</span>
+        </div>
+        <div class="error-message">
+            <p>Invalid day. Please enter a valid day for the selected month.</p>
+        </div>
+    </div>
+</div>
+
+<!-- Added [E] Amulya for date validation popup -->
+		
 		<div style="display: flex; justify-content: space-between; margin-top: 100px;">
 			<button class="btn btn-primary search" type="submit" id="searchbtn" onsubmit="searchcall()"
 				onkeydown="enterClick(10,event)">Search</button>
